# SK-accel

./: CMakeLists.txt  README.md
include/: customexceptions.h  vect.h
include/matrix/: matrix.h
include/shared_util/: customexceptions.h  gpu.h  templates.h  util.h
include/vect/: vect.h
src/: matrix.cpp  stats.cpp  vect.cpp
tests/: MATRIX--TEST.cpp  TIMINGS.cpp  VECT--TEST.cpp  matrixTest.cpp  testing.h  vectTest.cpp
